Salesforce/src/objects/passport_applicationform__c.object
<CustomObject>
    <description>take the form for applying new passport</description>
    <fields>
        <fullName>Applicant_s_name__c</fullName>
        <label>Applicant&apos;s name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tatkal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applying_for__c</fullName>
        <description>enter whether u r applying for fresh or renewal</description>
        <label>Applying for</label>
        <picklist>
            <picklistValues>
                <fullName>FRESH</fullName>
                <color>#33FFFF</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TATKAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMAIL_ID__c</fullName>
        <externalId>true</externalId>
        <label>EMAIL ID</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Educational_Details__c</fullName>
        <label>Educational Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>MALE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FEMALE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PLACE_OF_BIRTH__c</fullName>
        <label>PLACE OF BIRTH</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBMIT__c</fullName>
        <label>SUBMIT DOCUMENTS</label>
        <picklist>
            <controllingField>TYPE_OF_Person__c</controllingField>
            <picklistValues>
                <fullName>AADHAR CARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOTERCARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSC CERTIFICATE/ABOVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIRTH CERTIFICATE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sur_name__c</fullName>
        <label>Sur name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE_OF_Person__c</fullName>
        <label>TYPE OF PERSON</label>
        <picklist>
            <picklistValues>
                <fullName>LITERATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILLITERATE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <picklist>
            <picklistValues>
                <fullName>ANDAMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDHRA PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHIHAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHATTHIGUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUJARAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARYANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIMACHAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAMMU KASHIMEER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KARNATAKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KERALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAHARASHTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEGHALAYA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIJORAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAGALAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAMILANADU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELANGANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTTHARAKAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST BENGAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Passport applicationform</label>
    <nameField>
        <displayFormat>PPAN#{0}</displayFormat>
        <label>passport applicationform Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passport applicationforms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>